--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,7 @@
     "multer-s3": "^3.0.1",
     "mysql2": "^3.4.2",
     "nodemailer": "^6.9.3",
+    "nodemon": "^2.0.22",
     "sequelize": "^6.32.1"
   }
 }
