--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/mohit-singh-2125/userAuth#readme",
   "dependencies": {
+    "@elasticemail/elasticemail-client": "^4.0.23",
     "aws-sdk": "^2.1407.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
